# Pokemon_mcp

./: .env.example  .gitignore  README.md  app.py  interactive_test.py  pyproject.toml  requirements.txt  start_server.sh  test_all.sh
mcp_server/: battle.py
mcp_server/resources/: pokemon_resource.py
mcp_server/tools/: battle_tool.py
mcp_server/utils/: damage_calculator.py  moves_database.py  pokeapi_client.py  status_effects.py  type_chart.py
src/: __init__.py  server.py
src/battle/: __init__.py  calculator.py  engine.py  status.py  types.py
src/models/: __init__.py  pokemon.py
src/resources/: __init__.py  pokemon_data.py
src/services/: cache.py  pokeapi.py
src/tools/: __init__.py  battle_simulator.py
tests/: test_battle.py  test_pokeapi.py
